--- a/JavaScript01/js04_Salario1.htm
+++ b/JavaScript01/js04_Salario1.htm
@@ -1,67 +1,81 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>js04_ifelse.htm</title>
-<meta http-equiv="Content-Type" content="type/html" charset="utf-8"  >
-<meta charset="utf-8" />
+	<title>js04_salario.htm - aninhamento de if</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta charset="utf-8">
 </head>
+
 <body>
-<script type="text/javascript">
-	var js_qht;
-	var js_vht;
-	var js_inss;
-	var js_tdes;
-	var js_sb;
-	var js_sl;
+	<script language="JavaScript">
 
-	js_qht = parseFloat(window.prompt('Informe a quantidade de horas trabalhadas/mes: (135 a 180) ','00'));
-	js_vht = parseFloat(window.prompt('Informe o valor da hora trabalhada: (25 a 50)','00'));
-	js_inss = parseFloat(window.prompt('Informe o percentual de desconto do INSS: (5 a 15)','00'));
-	js_sb = js_qht * js_vht
-	js_tdes = (js_inss/100) * js_sb
-	js_sl = js_sb - js_tdes
+/*variaveis*/
+var js_qht;
+var js_vht;
+var js_inss;
+var js_tdes;
+var js_sb;
+var js_sl;
 
-	document.write('<p>Quantidade de horas trabalhadas (135 a 180) => <b>' + js_qht '</b>');
-	if(js_qht > 180){
-		document.write('...(<b>Valor máximo Exedido!</b>)');
-	}
-	if(js_qht < 135){
-		document.write('...(<b>Valor minimo Inválido!</b>)');
-	} 
-	document.write('<p>Quantidade de horas trabalhadas (25 a 50) => <b>' + js_vht '</b>');
-	if(js_vht > 50){
-		document.write('...(<b>Valor máximo Exedido!</b>)');
-	}
-	if(js_vht < 25){
-		document.write('...(<b>Valor minimo Inválido!</b>)');
-	}
-	document.write('<p>Quantidade de horas trabalhadas (5 a 15) => <b>' + js_inss '</b>');
-	if(js_vht > 15){
-		document.write('...(<b>Valor máximo Exedido!</b>)');
-	}
-	if(js_vht < 5){
-		document.write('...(<b>Valor minimo Inválido!</b>)');
-	}
-	document.write('<p>=================================================================================');
-	document.write('<p><b>Salário Bruto = </b>' + js_sb);
-	document.write('<p><b>Total de desconto INSS = ' + js_tdes);
-	document.write('<p><b>Salário Líquido = </b>' + js_sl);
+/*entrada de dados*/
+js_qht = parseFloat(window.prompt('Informe a quantidade de horas trabalhadas/mes: (135 a 180)','00'));
+js_vht = parseFloat(window.prompt('Informe p valor da hora trabalhada: (25 a 50)','00'));
+js_inss = parseFloat(window.prompt('Informe o percentual de desconto INSS: (5 A 15)','00'));
 
-	if (js_sl >10500){
-		document.write('...(<b>Salário Elevado! </b>maior que 10.500)');
+/*processamento de dados*/
+js_sb = js_vht * js_qht;
+js_tdes = (js_inss/100)*js_sb;
+js_sl = js_sb - js_tdes;
+
+/*saída de dados com consistencia de valores*/
+document.write('<p><b>DEMONSTRATIVO PARA CALCULO DO SALARIO LIQUIDO</b>');
+
+document.write('<p>Quantidade de horas trabalhadas (135 a 180) => <b>' + js_qht + '</b>');	
+if(js_qht > 180){
+	document.write('...(<b> Valor maximo excedido!</b>)');
+}
+if(js_qht < 135){
+	document.write('...(<b>Valor minimo invalido!)');
+}
+document.write('<p>Valor da hora trabalhada (25 a 50) => <b>' + js_vht + '</b>');
+if(js_vht > 50){
+	document.write('...(<b>Valor maximo excedido!</b>)');
+}
+if(js_vht <25){
+	document.write('...(<b>Valor minimo invalido!</b>)');
+}
+document.write('<p>Percentual de desconto INSS(5 a 15) => <b>' + js_inss +'</b>');
+if(js_inss > 15){
+	document.write('...(<b>Valor maximo excedido!</b>)');
+}
+if(js_inss < 5){
+	document.write('...(<b>Valor minimo invalido!</b>)');
+
+}
+document.write('<p>=============================================================================');
+document.write('<p><b>Salario bruto = </b>'+js_sb);
+document.write('<p>Total de descontos INSS = '+js_tdes);
+document.write('<p><b>Salario Liquido = </b>'+js_sl);
+
+/*saida de dados com aninhamento de if*/
+if(js_sl > 10500){
+	document.write('...(<b>Salario Elevado!</b>maior que 10.500)');
+}
+else{
+	if(js_sl > 6000){
+		document.write('...(<b>Salario Satisfatorio!</b>maior que 6.000)');
 	}
 	else{
-		if(js_sl > 6000){
-			document.write('...(<b>Salário Satisfatorio! </b>maior que 6.000)');
+		if(js_sl > 3000){
+			document.write('...(<b>Salario Moderado!</b>maior que 3.000)');
 		}
 		else{
-			if(js_sl > 3000){
-				document.write('...(<b>Salário Moderado! </b>maior que 3.000)');
-			}else{
-				document.write('...(<b>Salário Insatisfatorio! </b>maior que 3.000)');
-			}
+			document.write('...(<b>Salario Insatisfatorio! </b>menor ou igual a 3000)');
 		}
 	}
-</script>
+}
+/*ultimo exercicio https://dev.educatux.com.br/uniceub/desenvolvimentoweb/-/blob/master/Javascript%203/Demonstra%C3%A7%C3%A3o%203%20Introdu%C3%A7%C3%A3o%20a%20Java%20Script%20M%C3%B3dulo%203.mp4?expanded=true&viewer=rich */
+</script> 
 </body>
 </html>
